# ttnn-visualizer

./: .env.sample  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .stylelintrc.cjs  AGENTS.md  CONVENTIONS.md  Debug multi device.md  Dockerfile  LICENSE  MANIFEST.in  README.md  appserver.py  building-the-docs.md  docker-compose.yml  eslint.config.cjs  flake.nix  index.html  install.sh  issue-1517-top-n-slowest-ops-plan.md  legacySassSvgInlinerFactory.js  mypy.ini  package-lock.json  package.json  package.nix  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  site.webmanifest  tsconfig.json  tsconfig.node.json  ttnn-visualizer.code-workspace  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: build-docs.yml  build-wheels.yml  dependency-license-check.yml  docker-image.yml  lint-and-test.yml  release-dev-to-main-pr.yml  release.yml  smoke-tests.yml  spdx-check.yml
.husky/: pre-commit
backend/: Dockerfile  app.py  appserver.py  database.py  empty.sqlite  extensions.py  main.py  models.py  queries.py  remotes.py  requirements.txt  schemas.py  settings.py  utils.py  views.py
backend/config/: gunicorn.py
backend/ttnn_visualizer/: __init__.py  alembic.ini  app.py  appserver.py  csv_queries.py  database.py  database_migrations.py  decorators.py  enums.py  exceptions.py  extensions.py  file_uploader.py  file_uploads.py  instances.py  mlir.py  mlir_server.py  models.py  pytest_plugin.py  queries.py  read_binary.py  remote_sqlite_setup.py  remotes.py  report_source_file.py  requirements.txt  schemas.py  serializers.py  sessions.py  settings.py  sftp_operations.py  sockets.py  ssh_client.py  stack_trace_source.py  tensor_comparison.py  utils.py  views.py
docker/: Dockerfile
docker/SSH/: Dockerfile
docs/: MakeFile  conf.py  contributing.md  docker.md  getting-started.md  index.rst  installing.md  remote-querying.md  remote-sync-and-querying.md  remote-sync.md
docs/src/: contributing.md  getting-started.md  installing.md  linked-reports.md  linking-reports.md  remote-sync.md  running-from-source.md  running-the-application.md  support.md  troubleshooting.md  what-is-ttnn-visualizer.md
public/perf/: ops_perf_results_SEG_ENCODER_2024_10_04_01_36_08.csv
public/sample-data/: cluster-desc.yaml
scripts/: bump_pyproject_version.py  check-missing-dep-licenses.mjs  check-missing-licenses.mjs  check-spdx.mjs  find-missing-dep-licenses.mjs  find-missing-js-dep-licenses.mjs  get-missing-licenses.mjs  index_remote_search.py  release.mjs  smoke_test.py  smoke_test_helpers.py
src/: App.tsx  ErrorPage.tsx  error-page.tsx  graphWorker.ts  index.scss  main.tsx  vite-env.d.ts
src/assets/: temp.json
src/components/: AppVersionStatus.tsx  ApplicationList.tsx  BufferDetails.tsx  BufferSummaryChart.tsx  BufferSummaryPlotRenderer.tsx  BufferSummaryRow.tsx  BufferTable.tsx  Collapsible.tsx  DeviceOperations.tsx  DeviceSelector.tsx  ExpandableTensor.tsx  FeedbackButton.tsx  FileStatusOverlay.tsx  FileStatusOverlayWrapper.tsx  FolderPicker.tsx  FooterInfobar.tsx  GlobalSwitch.tsx  GoldenTensorComparisonIndicator.tsx  GraphSelector.tsx  HighlightedText.tsx  InitialMessage.tsx  L1MemoryRenderer.tsx  Layout.tsx  ListItem.tsx  LoadingSpinner.tsx  LocalFolderSelector.tsx  Logo.tsx  MainNavigation.tsx  MemoryConfigRow.tsx  MemoryTag.tsx  MicroOperations.tsx  MlirProcessingStatus.tsx  MultiSelectField.tsx  NPEProcessingStatus.tsx  NextBuffer.tsx  OperationArguments.tsx  OperationComponent.tsx  OperationDetailsComponent.tsx  OperationDetailsNavigation.tsx  OperationGraphComponent.tsx  (+32 more)
src/definitions/: BufferSummary.ts  CellColour.ts  ConnectionStatus.ts  DRAMMemorySize.ts  Deallocate.ts  DeviceArchicture.ts  DeviceArchitecture.ts  Devices.ts  Endpoints.ts  GRAPH_COLORS.tsx  GraphColors.ts  GraphColors.tsx  L1MemorySize.ts  L1Pressure.ts  LoadingSpinner.ts  MLIRData.ts  MlirServer.ts  NPEData.ts  PerfTable.ts  Performance.ts  PerformanceCharts.ts  PerformancePlotColours.ts  PlotConfigurations.ts  ProducersConsumers.ts  RemoteConnection.ts  Reports.ts  RouteObjectList.tsx  Routes.ts  ScrollPositions.ts  ScrollPositionsV2.ts  SortingOptions.ts  StackTrace.ts  StackedPerfTable.ts  TestIds.ts  UiConfig.ts  Versions.ts  VirtualList.ts  VirtualLists.ts  appData.ts  (+3 more)
tests/: BufferSummaryPlotControls.spec.tsx  BufferSummaryPlotRendererDRAM.overThreshold.spec.tsx  BufferSummaryPlotRendererDRAM.spec.tsx  BufferSummaryVirtualizedList.spec.tsx  CircularBufferPressureModal.spec.tsx  ClusterRenderer.spec.tsx  FileStatusOverlay.spec.tsx  L1FullnessBar.spec.tsx  MemoryLegendElement.spec.tsx  MlirFileResultsOverlay.spec.tsx  MlirNodeDetailsPanel.spec.tsx  MlirPortAttrs.spec.tsx  OperationDetails.globallyAllocatedCB.spec.ts  OperationPerfRowBar.spec.tsx  PerfChartsIndex.spec.tsx  PerfColumnPicker.spec.tsx  PerfKernelColour.spec.ts  PerfReport.spec.tsx  PerfTable.spec.tsx  PerfTableColumns.spec.ts  PerfTableSkeleton.spec.tsx  PerfTensorDrawer.spec.tsx  PerfTensorPanel.spec.tsx  Performance.spec.tsx  PerformanceCharts.spec.ts  SVGBufferRenderer.spec.tsx  SourceFileButton.spec.tsx  StackedPerfTable.spec.tsx  TensorVisualisationComponent.spec.tsx  bufferChunksToColoredChunks.spec.ts  buildL1PressureChartSeries.spec.ts  calculateCondensed.spec.ts  clusterTopology.spec.ts  enrichPerfRowData.spec.ts  formatting.spec.ts  getChartData.spec.ts  getCoresInRange.spec.ts  getFileStatusLabel.spec.ts  getOperationLink.spec.tsx  getOverallFileTransferPercent.spec.ts  (+34 more)
(+413 files in other folders)
