[project]
name = "ttnn_visualizer"
authors = []
version = "0.43.0"
description = "TT-NN Visualizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.1.1",
    "gunicorn~=23.0.0",
    "uvicorn==0.30.1",
    "flask_cors==4.0.1",
    "pydantic==2.7.3",
    "pydantic_core==2.18.4",
    "Flask-Static-Digest==0.4.1",
    "setuptools==65.5.0",
    "python-dotenv==1.0.1",
    "flask-sqlalchemy==3.1.1",
    "flask-socketio==5.4.1",
    "gevent==24.10.2",
    "pandas==2.2.3",
    "wheel",
    "build",
    "PyYAML==6.0.2",
    "tt-perf-report==1.0.7",
    "zstd==1.5.7.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy",
    "pytest==8.4.1",
]

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]

[build-system]
requires = ["setuptools==69.5.1", "setuptools-scm==7.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ttnn-visualizer = "ttnn_visualizer.app:main"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
