[project]
name = "ttnn_visualizer"
authors = []
version = "0.45.0"
description = "TT-NN Visualizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build",
    "Flask-Cors==6.0.0",
    "flask-socketio==5.4.1",
    "flask-sqlalchemy==3.1.1",
    "Flask-Static-Digest==0.4.1",
    "Flask==3.1.1",
    "gevent==24.10.2",
    "gunicorn~=23.0.0",
    "pandas==2.2.3",
    "pydantic_core==2.18.4",
    "pydantic==2.7.3",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "tt-perf-report==1.0.7",
    "uvicorn==0.30.1",
    "zstd==1.5.7.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy",
    "pytest==8.4.1",
]

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]

[build-system]
requires = ["setuptools==78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ttnn-visualizer = "ttnn_visualizer.app:main"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
