[project]
name = "ttnn_visualizer"
authors = []
version = "0.90.0"
description = "TT-NN Visualizer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "alembic~=1.18.0",
    "Flask-Cors>=6.0.0,<7.0",
    "flask-socketio>=5.6.0,<6.0",
    "flask-sqlalchemy==3.1.1",
    "Flask-Static-Digest==0.4.1",
    "Flask>=3.1.0,<4.0",
    "gevent==25.9.1",
    "gunicorn~=23.0.0",
    "orjson>=3.9.0",
    "pandas>=2.2.0,<3.0",
    "pydantic_core==2.41.5",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "PyYAML>=6.0.0,<7.0",
    "tt-perf-report==1.2.4",
    "zstd>=1.5.7,<2.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "isort==6.0.1",
    "mypy==2.0.0",
    "playwright==1.58.0",
    "pytest==9.0.3",
    "types-PyYAML==6.0.12.20240311",
]
docs = [
    "myst_parser==4.0.1",
    "nbsphinx==0.9.7",
    "sphinx_rtd_theme==3.0.2",
    "sphinx_sitemap==2.9.0",
    "sphinx==8.1.3",
    "sphinxcontrib.email==0.3.6",
]

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
ttnn_visualizer = ["alembic.ini", "alembic/**/*.py"]

[build-system]
requires = ["setuptools>=78.1.1,<81.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ttnn-visualizer = "ttnn_visualizer.app:main"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true

[[tool.mypy.overrides]]
module = "flask_static_digest"
ignore_missing_imports = true

[tool.uv]
# Minimum uv version for local dev and CI (astral-sh/setup-uv reads this when no
# explicit `version:` input is set). Use a lower bound rather than an exact pin so
# package managers like Homebrew can ship newer patch releases without blocking
# contributors.
required-version = ">=0.11.0"
# Use uv-managed Python from .python-version; do not fall back to system Python.
python-preference = "only-managed"
